<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="serif"
            android:text="@string/result_show"
            android:textColor="#F44336"
            android:textSize="40sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/candidate1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="serif"
            android:text="@string/c1_result"
            android:textColor="#3F51B5"
            android:textSize="40sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/candidate2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/c2_result"
            android:textColor="#3F51B5"
            android:textSize="40sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/candidate3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/c3_result"
            android:textSize="40sp"
            android:textColor="#3F51B5"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>