<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/please_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/vote_please"
            android:gravity="center"
            android:text="@string/please_vote"
            android:textColor="@color/purple_500"
            android:textSize="50sp"
            android:textStyle="bold"></TextView>


        <LinearLayout
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="30sp"
            android:background="#C5BCBC"
            android:contentDescription="@string/name_info"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/name_info"
                android:textColor="@color/purple_700"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/c_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Enter_name"
                android:textColor="@color/purple_700"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_field"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="30sp"
            android:background="#B8AEAE"
            android:contentDescription="@string/name_info"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/id_info"
                android:textColor="@color/purple_700"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/c_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Enter_id"
                android:textColor="@color/purple_700"
                android:textSize="30sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/candidates"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@color/teal_200"
            android:entries="@array/candidates_list"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tog_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Accept"
                android:textColor="@color/purple_500"
                android:textOff="Accept"
                android:textOn="Decline"
                android:textSize="30dp"
                android:textStyle="italic"
                android:typeface="normal"
                tools:text="Decline" />

            <Button
                android:id="@+id/vote_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:onClick="choose"
                android:text="VOTE"
                android:textSize="25dp" />
        </LinearLayout>

        <Button
            android:id="@+id/see_results"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="20dp"
            android:onClick="Result"
            android:textSize="40sp"
            android:text="@string/see_results"/>

        <TextView
            android:id="@+id/spnr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:text="@string/spinner_value"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="40sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>